# multi-agent-demo

./: .gitignore  AGENTS.md  README.md  config.toml  demo-invoke.js  demo-invoke.py  friends-bar-demo.py  minimal-claude-minimax.py  minimal-codex.js  minimal-codex.py  minimal-gemini-sdk.py  minimal-gemini.py
docs/: development-plan.md  json-schema-migration-postmortem-2026-02-19.md  openclaw-gap-plan.md  phase0-friends-bar.md  phase1-development-plan.md  target.md  windows-compromise-remediation-2026-02-21.md
prompts/: linabell_delivery.md  repair_json.md  stella_review.md  system.md
src/: __init__.py  invoke.js  invoke.py
src/friends_bar/: __init__.py  agents.py  orchestrator.py
src/protocol/: __init__.py  errors.py  models.py  validators.py
src/providers/: __init__.py  claude_minimax.py  codex.js  codex.py  gemini.py  xxx.js  xxx.py
src/utils/: audit_log.py  process_runner.py  runtime_config.py  session-store.js  session_store.py
tests/: test_audit_log.py  test_gemini_adapter.py  test_invoke_provider_defaults.py  test_orchestrator_audit_logging.py  test_process_runner.py  test_protocol_contract.py  test_protocol_json.py  test_provider_parsing.py  test_runtime_config_cache.py
work/test_agent/: README.md  pyproject.toml  requirements.txt
work/test_agent/examples/: train.csv
work/test_agent/models/: svc_model.pkl
work/test_agent/output/: pred.csv
work/test_agent/src/svm_project/: __init__.py  cli.py  data.py  model.py
work/test_agent/tests/: test_svm_workflow.py
